Mon Aug 21 20:46:43 UTC 2006  Steve Huston  <shuston@riverace.com>

        * configure.ac: Modified the check for the net/if.h header file
          to do a #include <sys/socket.h> if it exists. Allows the compile
          of net/if.h to succeed, fixing a configure warning for a file that
          exists but won't compile. Thanks to Don Meek <Don dot Meek at
          windstream dot com> for reporting this problem.

        * THANKS: Added Don Meek to the Hall of Fame.

Mon Aug 21 20:43:59 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.inl:

          Added the missing implementation of the static process_file ()
          method. Thanks to Lothar Werzinger <lothar@tradescape.biz> for
          pointing that out.

Mon Aug 21 20:06:38 Pacific Daylight Time 2006  Ossama Othman  <ossama_othman at symantec dot com>

        From Russell Mora <russell_mora at symantec dot com>:
        * ace/Thread_Exit.cpp (instance):

          Fixed race condition in generated code by stopping optimizer
          from re-ordering static variable initializations by declaring
          static "instance_" variable as "volatile".  This problem was
          observed on a quad-CPU Solaris 8 box.

Mon Aug 21 18:31:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          In all files except ace.doxygen added SHORT_NAMES=YES to let
          doxygen generate shorter filenames, this should fix the problems
          we had during the release with cpio not capable of handling
          long filenames

Mon Aug 21 17:46:55 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Numeric_Limits.h (ACE_Numeric_Limits):

          The Microsoft Platform SDK does not provide
          std::numeric_limits<> specializations for 64 bit integers so we
          need to explicitly provide ACE_Numeric_Limits<> specializations
          to compensate for this deficiency.  [Bug 2639]
